--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,7 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "http://localhost:1313/"
+languageCode = "en-us"
+title = "AhbeeWeb"
+theme = "ahbeeweb-theme"
+enableRobotsTXT = true
+
+
