--- a/netlify.toml
+++ b/netlify.toml
@@ -9,11 +9,9 @@
   for = "/sitemap.xml"
   [headers.values]
     Content-Type = "application/xml"
+    Cache-Control = "max-age=3600"
 
 [[headers]]
-  for = "/*"
+  for = "/*.xml"
   [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Type = "application/xml"
